# ebpf-dns-cache

./: Cargo.toml  Makefile  README.md  rustfmt.toml
.github/workflows/: release.yml
scripts/: dns_query_test.sh
src/: main.rs  tests.rs  tui.rs
src/bpf/: dns_parser.bpf.c  dns_parser.h  mod.rs
